redirected the commits from the main page to commits and passed Sha to pull out specific commit

--- a/commits/app/templates/index.hbs
+++ b/commits/app/templates/index.hbs
@@ -1,11 +1,14 @@
-<table border="1" width="50%">
+{{!-- <table border="1" width="50%">
     <thead></thead>
     <tbody>
         {{#each model as |c|}}
             <tr>
-                <td>{{c.commit.author.name}}</td>
-                <td>{{c.commit.message}}</td>
+                <td>
+                    {{c.commit.author.name}}<br/>
+                    {{c.commit.message}}<br/>
+                    {{#link-to 'commits.commit' c}}{{c.sha}}{{/link-to}}<br/>
+                </td>
             </tr>
         {{/each}}    
     </tbody>
-</table>
+</table> --}}
