--- a/commits/app/styles/app.css
+++ b/commits/app/styles/app.css
@@ -1,1 +1,8 @@
 @import url("https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css");
+@import url('https://fonts.googleapis.com/css?family=Source+Sans+Pro');
+
+body {
+    font-size: 14px;
+    margin: 10px 10px 10px 10px;
+    font: 'Source Sans Pro';
+}
