made the commits working, but needs some work in the proper way

--- a/commits/app/templates/commits/commit.hbs
+++ b/commits/app/templates/commits/commit.hbs
@@ -5,5 +5,5 @@
     <img src={{model.committer.avatar_url }} alt="Logo">
 </div>
 
-<div><b>Author : </b> {{model.author}}</div>
-<div><b>Message : </b> {{model.message}}</div>
+<div><b>Author : </b> {{model.commit.author.name}}</div>
+<div><b>Message : </b> {{model.commit.message}}</div>
