The data now comes from the Route. Added the Ember flow.png

--- a/components-demo/app/templates/index.hbs
+++ b/components-demo/app/templates/index.hbs
@@ -1,6 +1,6 @@
 {{ 
     profile-card 
-    name="Ravi Kumar" 
-    avatar="https://randomuser.me/api/portraits/thumb/lego/1.jpg" 
-    bio="Great artist"
+    name=model.name 
+    avatar=model.avatar 
+    bio=model.bio
 }}
